# p7_g1_multiclase

./: .dockerignore  .gitignore  AddDependencias_vscode.Preprocesamiento_p7_g1_multiclase_JJ.ipynb.sh  README.md  app.py  app_m.py  commit_cambios_preprocesamiento_20260319121638.sh  commit_message_2-feature_eda_jj.txt  commit_message_2-feature_eda_jj_20260319121638.txt  commit_message_2-feature_eda_jj_20260319133259.txt  docker-compose.yml  dockerfile  git_commit_con_status_2-feature_eda_jj.sh  main.py  push_rama_2-feature_eda_jj.sh  pyproject.toml  pyproject2.toml  tree-fa_p7_g1_multiclase_20260319122839.txt
assest/: Health.json  Nutrition.json
data/: historico.csv
docs/: D20260111152226.Plantilla de Word - Tabla Encabezado Borde Texto.docx  README.ProyectoClasificaciónMulticlase.20260316092230L.md  README.p7_g1_multiclase.JJ.md  RequisitosProyecto.p7_g1_multiclase.txt  p7_g1_multiclase - ipynb.docx  p7_g1_multiclase.docx  ~$_g1_multiclase.docx  ~WRL3181.tmp
models/: Preprocesamiento_p7_g1_multiclase_JJ.ipynb  best_model.pkl  label_encoder_target.pkl  model_jm.pkl  modelo_obesidad-g.pkl  modelo_obesidad-jm.pkl  modelo_obesidad_final_g.pkl  pipeline_obesity_XGBoost_Optimizado_m.pkl  pipeline_obesity_xgboost.pkl  scaler.pkl
notebooks/: 02_preprocessing.ipynb  EDA_Obesity_p7_g1_multiclase_JJ.ipynb  Preprocesamiento_p7_g1_multiclase_JJ.20260319111103J.ipynb  Preprocesamiento_p7_g1_multiclase_JJ.ipynb  eda_obesity_a.ipynb  eda_obesity_g.ipynb  eda_obesity_jm.ipynb  eda_obesity_m.ipynb  eda_plantilla_jm.ipynb  entrenamiento_modelo_g.ipynb  evaluacion_modelo_g.ipynb  (+5 more)
(+59 files in other folders)
