[project]
name = "p7-g1-multiclase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "altair<5",
    "filelock>=3.25.2",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas==2.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit==1.41.0",
    "xgboost>=3.2.0",
]
